# textProcessor

./: .gitignore  Doxyfile  README.md
textProcessor/: CMakeLists.txt  main.cpp  textProcessor.sln  textProcessor.vcxproj  textProcessor.vcxproj.filters
textProcessor/Header_files/: test.hpp
textProcessor/Source_files/: main.cpp
textProcessor/dataFiles/: CommandNames.hpp  CommonErrors.hpp  DataFiles.hpp  FormatterTypes.hpp  blockData.txt  macroData.txt
textProcessor/headers/: DataFiles.hpp  FileManager.hpp  TextProcessor.hpp
textProcessor/headers/Block/: ActiveBlock.hpp  Block.hpp  BlockParser.hpp  BlockRegister.hpp
textProcessor/headers/Commands/: AddLineCommand.hpp  AddMacroCommand.hpp  ChangeLineCommand.hpp  Command.hpp  CommandRegister.hpp  CreateBlockCommand.hpp  ExitCommand.hpp  InsertLineCommand.hpp  ListLoadedDocumentsCommand.hpp  LoadDocumentCommand.hpp  RemoveActiveBlockCommand.hpp  RemoveBlockCommand.hpp  RemoveLineCommand.hpp  RemoveMacroCommand.hpp  RemoveRepeatsCommand.hpp  SaveAsCommand.hpp  SaveCommand.hpp  ScrambleCommand.hpp  SetActiveBlockCommand.hpp  SetActiveDocumentCommand.hpp  SetFormatCommand.hpp  ShowDocumentHasChangedCommand.hpp  ShowDocumentNameCommand.hpp  ShowDocumentNumLinesCommand.hpp  ShowDocumentNumSymbolsCommand.hpp  SortCommand.hpp  ToLowerCommand.hpp  ToUpperCommand.hpp  TrimLeadingCommand.hpp  TrimTrailingCommand.hpp  UnloadDocumentCommand.hpp  ViewAllBlocksCommand.hpp  ViewAllMacrosCommand.hpp  ViewDocumentCommand.hpp
textProcessor/headers/CommandsCLI/: AddLineCommandCLI.hpp  AddMacroCommandCLI.hpp  ChangeLineCommandCLI.hpp  CommandsCLI.hpp  CreateBlockCommandCLI.hpp  ExitCommandCLI.hpp  InsertLineCommandCLI.hpp  ListLoadedDocumentsCommandCLI.hpp  LoadDocumentCommandCLI.hpp  RemoveActiveBlockCommandCLI.hpp  RemoveBlockCommandCLI.hpp  RemoveLineCommandCLI.hpp  RemoveMacroCommandCLI.hpp  RemoveRepeatsCommandCLI.hpp  SaveAsCommandCLI.hpp  SaveCommandCLI.hpp  ScrambleCommandCLI.hpp  SetActiveBlockCommandCLI.hpp  SetActiveDocumentCommandCLI.hpp  SetFormatCommandCLI.hpp  ShowDocumentHasChangedCommandCLI.hpp  ShowDocumentNameCommandCLI.hpp  ShowDocumentNumLinesCommandCLI.hpp  ShowDocumentNumSymbolsCommandCLI.hpp  SortCommandCLI.hpp  ToLowerCommandCLI.hpp  ToUpperCommandCLI.hpp  TrimLeadingCommandCLI.hpp  TrimTrailingCommandCLI.hpp  UnloadDocumentCommandCLI.hpp  ViewAllBlocksCommandCLI.hpp  ViewAllMacrosCommandCLI.hpp  ViewDocumentCommandCLI.hpp
textProcessor/headers/Document/: ActiveDocument.hpp  Document.hpp  DocumentParser.hpp  DocumentRegister.hpp
textProcessor/headers/Documents/: Document.hpp
textProcessor/headers/Formatter/: ActiveFormatter.hpp  CenterFormatter.hpp  DirectFormatter.hpp  Formatter.hpp  WrapFormatter.hpp
textProcessor/headers/GenericDataClasses/: DataParser.hpp  DataRegister.hpp
textProcessor/headers/Lines/: DefaultLine.hpp  Line.hpp  LineCreator.hpp  NumberedLine.hpp  NumericLine.hpp  QuotedLine.hpp
textProcessor/headers/Macro/: Macro.hpp  MacroParser.hpp  MacroRegister.hpp
textProcessor/headers/Parsers/: DocumentParser.hpp
textProcessor/headers/Utils/: Stack.hpp
textProcessor/src/: FileManager.cpp  TextProcessor.cpp  main.cpp
textProcessor/src/Block/: ActiveBlock.cpp  Block.cpp  BlockParser.cpp  BlockRegister.cpp
textProcessor/src/Commands/: AddLineCommand.cpp  AddMacroCommand.cpp  ChangeLineCommand.cpp  CommandRegister.cpp  CreateBlockCommand.cpp  ExitCommand.cpp  InsertLineCommand.cpp  ListLoadedDocumentsCommand.cpp  LoadDocumentCommand.cpp  RemoveActiveBlockCommand.cpp  RemoveBlockCommand.cpp  RemoveLineCommand.cpp  RemoveMacroCommand.cpp  RemoveRepeatsCommand.cpp  SaveAsCommand.cpp  SaveCommand.cpp  ScrambleCommand.cpp  SetActiveBlockCommand.cpp  SetActiveDocumentCommand.cpp  SetFormatCommand.cpp  ShowDocumentHasChangedCommand.cpp  ShowDocumentNameCommand.cpp  ShowDocumentNumLinesCommand.cpp  ShowDocumentNumSymbolsCommand.cpp  SortCommand.cpp  ToLowerCommand.cpp  ToUpperCommand.cpp  TrimLeadingCommand.cpp  TrimTrailingCommand.cpp  UnloadDocumentCommand.cpp  ViewAllBlocksCommand.cpp  ViewAllMacrosCommand.cpp  ViewDocumentCommand.cpp
textProcessor/src/CommandsCLI/: AddLineCommandCLI.cpp  AddMacroCommandCLI.cpp  ChangeLineCommandCLI.cpp  CreateBlockCommandCLI.cpp  ExitCommandCLI.cpp  InsertLineCommandCLI.cpp  ListLoadedDocumentsCommandCLI.cpp  LoadDocumentCommandCLI.cpp  RemoveActiveBlockCommandCLI.cpp  (+23 more)
textProcessor/testFiles/: example.txt  example33.txt  example88.txt  example_copy.txt
textProcessor/textDocumentFiles/: example.txt
(+220 files in other folders)
