cmake_minimum_required(VERSION 3.10)
project(textProcessor VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(headers)

file(GLOB_RECURSE SOURCES
    "main.cpp"
    "src/*.cpp"
    "src/*/*.cpp"
    "src/Lines/LineCreator.cpp"
    "src/Document/Document.cpp"
    "src/Document/DocumentManager.cpp"
    "src/Document/DocumentParser.cpp"
    "src/Document/DocumentRegister.cpp"
    "src/Document/ActiveDocument.cpp"
    "src/Block/Block.cpp"
    "src/Block/BlockParser.cpp"
    "src/Block/BlockRegister.cpp"
    "src/FileManager.cpp"
    "src/Macro/Macro.cpp"
    "src/Macro/MacroManager.cpp"
    "src/Macro/MacroParser.cpp"
    "src/Macro/MacroRegister.cpp"
    "src/Formatter/Formatter.cpp"
    "src/Formatter/ActiveFormatter.cpp"
    "src/Formatter/CenterFormatter.cpp"
    "src/Formatter/DirectFormatter.cpp"
    "src/Formatter/WrapFormatter.cpp"
    "src/Commands/Command.cpp"
    "src/Commands/CommandRegister.cpp"
    "src/Commands/AddLineCommand.cpp"
    "src/CommandsCLI/AddLineCommandCLI.cpp"
    "src/Commands/SaveCommand.cpp"
    "src/CommandsCLI/SaveCommandCLI.cpp"
    "src/Commands/SaveAsCommand.cpp"
    "src/CommandsCLI/SaveAsCommandCLI.cpp"
    "src/Commands/LoadDocumentCommand.cpp"
    "src/CommandsCLI/LoadDocumentCommandCLI.cpp"
    "src/Commands/UnloadDocumentCommand.cpp"
    "src/CommandsCLI/UnloadDocumentCommandCLI.cpp"
    "src/Commands/SetActiveDocumentCommand.cpp"
    "src/CommandsCLI/SetActiveDocumentCommandCLI.cpp"
    "src/Commands/CreateBlockCommand.cpp"
    "src/CommandsCLI/CreateBlockCommandCLI.cpp"
    "src/Commands/RemoveBlockCommand.cpp"
    "src/CommandsCLI/RemoveBlockCommandCLI.cpp"
    "src/Commands/SetActiveBlockCommand.cpp"
    "src/CommandsCLI/SetActiveBlockCommandCLI.cpp"
    "src/Commands/SortCommand.cpp"
    "src/CommandsCLI/SortCommandCLI.cpp"
    "src/Commands/ViewAllBlocksCommand.cpp"
    "src/CommandsCLI/ViewAllBlocksCommandCLI.cpp"
    "src/TextProcessor.cpp"
    "src/Commands/ListLoadedDocumentsCommand.cpp"
    "src/CommandsCLI/ListLoadedDocumentsCommandCLI.cpp"
    "src/Commands/SetFormatCommand.cpp"
    "src/CommandsCLI/SetFormatCommandCLI.cpp"
    "src/Commands/ViewDocumentCommand.cpp"
    "src/CommandCLI/ViewDocumentCommandCLI.cpp"
    "src/Commands/RemoveLineCommand.cpp"
    "src/CommandsCLI/RemoveLineCommandCLI.cpp"
    "src/Commands/InsertLineCommand.cpp"
    "src/CommandsCLI/InsertLineCommandCLI.cpp"
    "src/Commands/ChageLineCommand.cpp"
    "src/CommandsCLI/ChageLineCommandCLI.cpp"
)

add_executable(textProcessor ${SOURCES})
